Lucene Change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Lucene 9.2.0 =======================

API Changes
---------------------

* LUCENE-10325: Facets API extended to support getTopFacets. (Yuting Gan)

New Features
---------------------

* LUCENE-10385: Implement Weight#count on IndexSortSortedNumericDocValuesRangeQuery
  to speed up computing the number of hits when possible. (Lu Xugang, Luca Cavanna, Adrien Grand)

* LUCENE-10422: Monitor Improvements: `Monitor` can use a custom `Directory` 
  implementation. `Monitor` can be created with a readonly `QueryIndex` in order to
  have readonly `Monitor` instances. (Niko Usai)

* LUCENE-10456: Implement rewrite and Weight#count for MultiRangeQuery
  by merging overlapping ranges . (Jianping Weng)

* LUCENE-10444: Support alternate aggregation functions in association facets. (Greg Miller)

Improvements
---------------------

* LUCENE-10229: return -1 for unknown offsets in ExtendedIntervalsSource. Modify highlighting to
  work properly with or without offsets. (Dawid Weiss)

* LUCENE-10494: Implement method to bulk add all collection elements to a PriorityQueue.
  (Bauyrzhan Sakhariyev)

* LUCENE-10484: Add support for concurrent random sampling by calling
  RandomSamplingFacetsCollector#createManager. (Luca Cavanna)

* LUCENE-10467: Throws IllegalArgumentException for Facets#getAllDims and Facets#getTopChildren
  if topN <= 0. (Yuting Gan)

Optimizations
---------------------

* LUCENE-10452: Hunspell: call checkCanceled less frequently to reduce the overhead (Peter Gromov)

* LUCENE-10451: Hunspell: don't perform potentially expensive spellchecking after timeout (Peter Gromov)

* LUCENE-10418: More `Query#rewrite` optimizations for the non-scoring case.
  (Adrien Grand)

* LUCENE-10436: Deprecate DocValuesFieldExistsQuery, NormsFieldExistsQuery and KnnVectorFieldExistsQuery